Modified Home Component

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <style>
+    body {
+      background-image: url(assets/images/b3.jpeg); 
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
