--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Matrimony</title>
+  <title>RajaRoja Matrimony</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/logoTitle.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -23,6 +23,24 @@
     body {
       background-image: url(assets/images/b3.jpeg); 
       height: 100%;
+      overflow-x: hidden;
+      overflow-y: scroll;
+      }
+    
+    ::-webkit-scrollbar { 
+        border-radius: 10px;
+        width: 20px;
+        background-color: rgb(249, 234, 253);
+    }
+
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-radius: 10x;
+    }
+    ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: rgb(128, 233, 42);
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     }
   </style>
 </head>
