--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Matrimony</title>
-  <base href="/Matrimony/">
+  <title>RajaRoja Matrimony</title>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/logoTitle.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -23,10 +23,28 @@
     body {
       background-image: url(assets/images/b3.jpeg); 
       height: 100%;
+      overflow-x: hidden;
+      overflow-y: scroll;
+      }
+    
+    ::-webkit-scrollbar { 
+        border-radius: 10px;
+        width: 20px;
+        background-color: rgb(249, 234, 253);
+    }
+
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-radius: 10x;
+    }
+    ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: rgb(128, 233, 42);
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     }
   </style>
 <link rel="stylesheet" href="styles.5ea05b3b94c73baa1836.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.7095e36e5e1ddf7b6be5.js" type="module"></script><script src="main-es5.7095e36e5e1ddf7b6be5.js" nomodule defer></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.e31ab1fb8f11b7d0266d.js" type="module"></script><script src="main-es5.e31ab1fb8f11b7d0266d.js" nomodule defer></script></body>
 </html>
